# bevy-playground

./: Cargo.toml  clippy.toml  readme.md
crates/portal/: Cargo.toml  config.toml
crates/portal/src/: config.rs  main.rs  ui.rs
crates/simple-space/: Cargo.toml
crates/simple-space/src/: constant.rs  main.rs  ui.rs
crates/simple-space/src/modules/: asteroid.rs  block.rs  bullet.rs  enemy.rs  health.rs  mod.rs  object_pool.rs  physics.rs  ship.rs  template.rs  vfx.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
