[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
fastrand = "2.3.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
bevy_simple_text_input = { git = "https://github.com/alimulap/bevy_simple_text_input" }

[workspace]
members = [
  "crates/*"
]

[workspace.dependencies]
bevy = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
fastrand = "2.3.0"
bevy_simple_text_input = { git = "https://github.com/alimulap/bevy_simple_text_input" }
avian2d = "0.2.1"
bevy_prototype_lyon = "0.13.0"
rand_core = "0.6"
bevy_rand = { version = "0.9", features = ["rand_chacha", "wyrand"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2

[profile.dev-opt]
inherits = "dev"
opt-level = 1

[profile.dev-opt.package."*"]
opt-level = 3

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
#
# [workspace.lints.clippy]
# too_many_arguments = "allow"
# type_complexity = "allow"
