[package]
name = "simple-space"
version = "0.1.0"
edition = "2024"

[dependencies]
playground_ui = { path = "../ui" }
bevy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
fastrand = { workspace = true }
bevy_simple_text_input = { workspace = true }
avian2d = { workspace = true }
bevy_prototype_lyon = { workspace = true }
rand_core = { workspace = true }
bevy_rand = { workspace = true }
